@@ -135,6 +135,7 @@ int     parse_int_range(int n, int f, int t);
 int     parse_bool(int n);
 double  parse_float(int n);
 double  parse_float_range(int n, double f, double t);
+int     get_arg_count(void);
 void    check_arg_count(int n);
 void    check_min_arg_count(int n);
 
